# vggt-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_thirdparty.sh  convert_weights.py  demo_vggt.cpp  download_weights.py
tests/: test_aggregator.cpp  test_all.cpp  test_attention.cpp  test_base_track_predictor.cpp  test_block.cpp  test_camera_head.cpp  test_distortion.cpp  test_dpt_head.cpp  test_drop_path.cpp  test_geometry.cpp  test_head_act.cpp  test_heads_utils.cpp  test_helper.cpp  test_layer_scale.cpp  test_load_fn.cpp  test_mlp.cpp  test_patch_embed.cpp  test_pose_enc.cpp  test_projection.cpp  test_rope.cpp  test_stack_sequential.cpp  test_swiglu_ffn.cpp  test_track_modules_blocks.cpp  test_track_modules_modules.cpp  test_track_modules_utils.cpp  test_track_refine.cpp  test_vggsfm_tracker.cpp  test_vggt.cpp  test_vision_transformer.cpp  test_visual_track.cpp  test_weight_loader.cpp
vggt/: CMakeLists.txt  aggregator.cpp  aggregator.h  vggt.cpp  vggt.h
vggt/dependency/: distortion.cpp  distortion.h  np_to_colmap.cpp  np_to_colmap.h  projection.cpp  projection.h  track_predict.cpp  track_predict.h  track_predictor.cpp  track_predictor.h  vggsfm_tracker.cpp  vggsfm_tracker.h  vggsfm_utils.cpp  vggsfm_utils.h
vggt/dependency/track_modules/: base_track_predictor.cpp  base_track_predictor.h  blocks.cpp  blocks.h  modules.cpp  modules.h  track_refine.cpp  track_refine.h  utils.cpp  utils.h
vggt/heads/: camera_head.cpp  camera_head.h  dpt_head.cpp  dpt_head.h  feature_fusion_block.cpp  feature_fusion_block.h  head_act.cpp  head_act.h  track_head.cpp  track_head.h  utils.cpp  utils.h
vggt/heads/track_modules/: base_track_predictor.cpp  base_track_predictor.h  blocks.cpp  blocks.h  corr_block.cpp  corr_block.h  efficient_update_former.cpp  efficient_update_former.h  modules.cpp  modules.h  utils.cpp  utils.h
vggt/layers/: attention.cpp  attention.h  block.cpp  block.h  drop_path.cpp  drop_path.h  layer_scale.cpp  layer_scale.h  mlp.cpp  mlp.h  patch_embed.cpp  patch_embed.h  rope.cpp  rope.h  swiglu_ffn.cpp  swiglu_ffn.h  vision_transformer.cpp  vision_transformer.h
vggt/models/: CMakeLists.txt  aggregator.cpp  aggregator.h  vggt.cpp  vggt.h
vggt/utils/: geometry.cpp  geometry.h  head_act.cpp  head_act.h  helper.cpp  helper.h  load_fn.cpp  load_fn.h  pos_embed.cpp  pos_embed.h  pose_enc.cpp  pose_enc.h  rotation.cpp  rotation.h  stack_sequential.h  visual_track.cpp  visual_track.h  weight_loader.cpp  weight_loader.h
